[tool.poetry]
name = "addrparse"
version = "0.1.0"
description = "Generates normalized host addresses from disparate inputs"
authors = ["Christopher Goes <ghostofgoes@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/GhostofGoes/addrparse"
keywords = ["ipaddress", "address", "ip", "hostname", "parse"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
pytest-random-order = "^1.0"
pytest-cov = "^2.6"
codespell = "^1.14"
flake8-bugbear = "^18.8"
flake8-import-order = "^0.18.0"
flake8-tidy-imports = "^1.1"
flake8-todo = "^0.7.0"
flake8-string-format = "^0.2.3"
bandit = "^1.5"
flake8-mypy = {git = "https://github.com/ambv/flake8-mypy.git"}

[tool.poetry.scripts]
addrparse = "addrparse.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"